--- a/LR_Model.ipynb
+++ b/LR_Model.ipynb
@@ -23,7 +23,7 @@
    "outputs": [],
    "source": [
     "########################################################\n",
-    "### Import Dataset\n",
+    "### Import the Dataset\n",
     "########################################################"
    ]
   },
